deploy/dev/ltx/service.yaml
apiVersion: v1
kind: Service
metadata: { name: kwanni-ltx, namespace: dev }
spec:
  selector: { app: kwanni-ltx }
  ports: [{ name: http, port: 8092, targetPort: http }]
